[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/SCRIPT_Resultado_Partida.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Loja/Perk_4.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Loja/money.png" type="Texture" id=3]
[ext_resource path="res://Font_Resultado.tres" type="DynamicFont" id=4]
[ext_resource path="res://Shaders/crt_shader.shader" type="Shader" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/screen_size = Vector2( 1280, 180 )
shader_param/show_curvature = true
shader_param/curvature_x_amount = 3.0
shader_param/curvature_y_amount = 3.0
shader_param/corner_color = Color( 0, 0, 0, 1 )
shader_param/show_vignette = true
shader_param/vignette_opacity = 1.0
shader_param/show_horizontal_scan_lines = true
shader_param/horizontal_scan_lines_amount = 180.0
shader_param/horizontal_scan_lines_opacity = 0.5
shader_param/show_vertical_scan_lines = false
shader_param/vertical_scan_lines_amount = 320.0
shader_param/vertical_scan_lines_opacity = 1.0
shader_param/boost = 1.35
shader_param/aberration_amount = 1.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.27451, 0.2, 0.184314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icone_de_DInheiro" type="Sprite" parent="."]
position = Vector2( 560, 472 )
scale = Vector2( 0.307815, 0.307815 )
texture = ExtResource( 3 )

[node name="Total_Moedas" type="Label" parent="."]
margin_left = 600.0
margin_top = 456.0
margin_right = 720.0
margin_bottom = 496.0
custom_fonts/font = ExtResource( 4 )
text = "[DINHEIRO]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontos" type="Label" parent="."]
margin_left = 352.0
margin_top = 192.0
margin_right = 573.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 4 )
text = "TOTAL DE PONTOS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mortes" type="Label" parent="."]
margin_left = 352.0
margin_top = 256.0
margin_right = 575.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 4 )
text = "Total de Mortes:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inimigos" type="Label" parent="."]
margin_left = 368.0
margin_top = 320.0
margin_right = 574.0
margin_bottom = 387.0
custom_fonts/font = ExtResource( 4 )
text = "Inimigos Mortos:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total_Pontos" type="Label" parent="."]
margin_left = 600.0
margin_top = 192.0
margin_right = 784.0
margin_bottom = 224.0
custom_fonts/font = ExtResource( 4 )
text = "[0]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total_Mortes" type="Label" parent="."]
margin_left = 600.0
margin_top = 256.0
margin_right = 784.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 4 )
text = "[0]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total_Inimigos" type="Label" parent="."]
margin_left = 592.0
margin_top = 320.0
margin_right = 792.0
margin_bottom = 352.0
custom_fonts/font = ExtResource( 4 )
text = "[0]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perk4_Ativado" type="Node2D" parent="."]

[node name="Perk_4" type="Sprite" parent="Perk4_Ativado"]
position = Vector2( 856, 472 )
scale = Vector2( 0.612676, 0.612676 )
texture = ExtResource( 2 )

[node name="x2" type="Label" parent="Perk4_Ativado"]
margin_left = 760.0
margin_top = 456.0
margin_right = 800.0
margin_bottom = 496.0
custom_fonts/font = ExtResource( 4 )
text = "X2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontos_Dobro_Final" type="Label" parent="Perk4_Ativado"]
margin_left = 912.0
margin_top = 456.0
margin_right = 1128.0
margin_bottom = 488.0
custom_fonts/font = ExtResource( 4 )
text = "X2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 456.0
margin_top = 528.0
margin_right = 824.0
margin_bottom = 584.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Voltar para o menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontos2" type="HTTPRequest" parent="."]

[node name="Moedas" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource( 4 )
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
